--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF1100</color>
+    <color name="red_dark">#A30E03</color>
     <color name="blue">#00D9FF</color>
+    <color name="blue_dark">#007185</color>
     <color name="yellow">#FFF700</color>
+    <color name="yellow_dark">#BFB902</color>
     <color name="green">#00FF00</color>
+    <color name="green_dark">#02B302</color>
 </resources>
